css/onboardingFlow.css
/* ... */
#startTasks .taskCatalog > .title,
#startTasks .taskCatalog > .altTitle,
#startTasks .productCatalog > .title,
#startTasks .productCatalog > .altTitle {
    padding: 0 20px;
    background: #777;
    color: #fff;
    margin-top: 15px;
    text-shadow: 0 1px 0 #333;
    font-size: 1.5em;
    line-height: 1.7em;
}

#startTasks .taskCatalog .altTitle,
#startTasks .productCatalog .altTitle {
    display:none;
}
#startTasks .taskCatalog .altTitle .backToPopularTasks,
#startTasks .productCatalog .altTitle .backToPopularProducts {
    text-decoration: underline;
    font-weight: normal;
    float: right;
    font-size: .8em;
    line-height: 1.8em;
}
#startTasks .taskCatalog .taskSearchTerm,
#startTasks .productCatalog .productSearchTerm{
    font-weight: bold;
    font-style: italic;
}
#startTasks .taskCatalog .taskTemplate,
#startTasks .taskCatalog .newTaskTemplate,
#startTasks .productCatalog .productTemplate,
#startTasks .productCatalog .newProductTemplate{
    display: none;
}
#startTasks .taskCatalog .taskItem,
#startTasks .selectedTasks .taskItem {
border-bottom: 1px solid #ccc;
border-top: 1px solid #aaa;
padding: 10px 20px;
}
#startTasks .taskCatalog .taskItem:touch,
#startTasks .productCatalog .productItem:touch {
    background: #ddd;
}
#startTasks .taskCatalog .taskItem .addButton {
    width: 50px;
    height: 50px;
    margin-right: 15px;
    float: left;
    border-radius: 10px;
    color: #fff;
    text-align: center;
    line-height: 45px;
    font-size: 2em;
    font-weight: bold;

    border: 1px solid #199CC3;
    background: #1abeee;
    text-shadow: 0 1px 2px #2f3e46;
    background-image: -webkit-gradient(linear,left top,left bottom,from( #86e3fe ),to( #1abeee ));
    background-image: -webkit-linear-gradient( #86e3fe,#1abeee );
    background-image: -moz-linear-gradient( #86e3fe,#1abeee );
    background-image: -ms-linear-gradient( #86e3fe,#1abeee );
    background-image: -o-linear-gradient( #86e3fe,#1abeee );
    background-image: linear-gradient( #86e3fe,#1abeee );
}
#startTasks .taskCatalog .taskItem .taskDetails,
#startTasks .productCatalog .productItem .productDetails,
#startTasks .selectedProducts .productItem .productDetails {
    float: left;
}
#startTasks .taskCatalog .taskItem .numKids,
#startTasks .productCatalog .productItem .numKids {
    color: #777;
}
#configureTasks {
    background: #fff;
}
#configureTasks .taskContent.ui-content {
    min-width: 416px;
}
#configureTasks .taskTitle {
    border-top-left-radius: inherit;
    border-top-right-radius: inherit;
    font-size: 1.6em;
}
#configureTasks .hideNonRepeat {
    display:none;
}
#configureTasks .taskRepeatPaymentDetails .resp,
#configureTasks .taskNonRepeatPaymentDetails .resp {
    display: none;
}
#startTasks .selectedTasks .taskItem .recurrance {
    color: #006d8e;
    text-shadow: 0 1px 0 #fff;
}
#startTasks .selectedTasks .taskItem .payment {
    float: right;
}
#startTasks .selectedTasks .taskItem .payment .money {
    color: #000;
    font-weight: bold;
}
#startTasks .selectedTasks .taskItem .payment .allowance {
    color: #8ab106;
}
#startTasks .selectedTasks .taskItem .payment .responsibility {
    font-style: italic;
    color: #777;
}

#startTasks .addGoalContent {
    display: none;
}
#startTasks .footerBar {
    display: none;
}
#startTasks .startTasksFooter {
    display: block;
}

/* Product catalog */

#startTasks .productCatalog .productItem,
#startTasks .selectedProducts .productItem {
    border-bottom: 1px solid #ccc;
    border-top: 1px solid #aaa;
    padding: 10px 20px;
}
#startTasks .productCatalog .productItem .productImage,
#startTasks .selectedProducts .productItem .productImage {
    position: relative;
    background: #fff;
    width: 150px;
    height: 150px;
    border: 1px solid #ccc;
    margin-right: 20px;
    float: left;
    display: table;
}
#startTasks .selectedProducts .productItem .productImage {
    width: 100px;
    height: 100px;
}
#startTasks .productCatalog .productItem .productImage .verticalMiddle,
#startTasks .selectedProducts .productItem .productImage .verticalMiddle {
    width: inherit;
    height:inherit;
    text-align: center;
}
#startTasks .productCatalog .productItem .productDetailsIcon,
#startTasks .selectedProducts .productItem .productDetailsIcon {
    position: absolute;
    top: -5px;
    left: -5px;
    opacity: .8;
    z-index: 10;
}
#startTasks .productCatalog .productItem .thumbnail,
#startTasks .selectedProducts .productItem .thumbnail {
    max-height: 100%;
    max-width: 100%;
}
#startTasks .productCatalog .productItem .productDetails {
    width: 63%;
}
#startTasks .selectedProducts .productItem .productDetails {
    width: 74%;
}

/* Product details popup */
#productDetailsPopup {
    background: #fff;
}
#productDetailsPopup .images {
    float: left;
    margin-right: 20px;
}
#productDetailsPopup .mainImage .verticalMiddle {
    width: 300px;
    height: 300px;
    text-align: center;
}
#productDetailsPopup .mainImage img {
    max-width: 100%;
    max-height: 100%;
    margin: auto;
}
#productDetailsPopup .details {
    float: left;
}
#productDetailsPopup .details p {
    margin: .5em 0;
}
#productDetailsPopup .altImages.populated {
    margin-top: 20px;
    padding-top: 20px;
    border-top: 1px dashed #ccc;
}
#productDetailsPopup .altWrapper {
    margin-right: 25px;
    border: 1px solid #ccc;
    margin-top: 2px;
    float: left;
}
#productDetailsPopup .altWrapper .verticalMiddle {
    width: 80px;
    height: 80px;
}
#productDetailsPopup .fourAcross .altWrapper {
    margin-right: 9px;
}
#productDetailsPopup .fourAcross .altWrapper .verticalMiddle {
    width: 65px;
    height: 65px;
}
#productDetailsPopup .altWrapper.selected {
    margin-top: 0;
    border: 3px solid #777;
}
#productDetailsPopup .altWrapper:last-child {
    margin-right: 0;
}
#productDetailsPopup .altWrapper .verticalMiddle {
    text-align: center;
}
#productDetailsPopup .altImages img {
    max-width: 100%;
    max-height: 100%;
}
/* ... */

